📦 Added inventory app for services

--- a/images/k8s_learn/Makefile
+++ b/images/k8s_learn/Makefile
@@ -1,8 +1,5 @@
 image:
-	cd container; docker build -t darshah/k8s_learn:v1 .
-
-image_v2:
-	cd container; docker build -t darshah/k8s_learn:v2 .
+	docker build -t darshah/k8s_learn:$(VERSION) .
 
 test_con:
 	docker run --rm -d --name=learn -e VERSION=v1 -p 4224:80 darshah/k8s_learn:v1
