📦 Added pharmacy app for services

--- a/images/inventory/Makefile
+++ b/images/inventory/Makefile
@@ -3,3 +3,6 @@ image:
 
 container:
 	docker run --rm -d --name=inventory -e VERSION=v1 -p $(PORT):80 darshah/k8s_learn_inventory:$(VERSION)
+
+dev:
+	PORT=$(PORT) VERSION=dev node app.js
