--- a/k8s/pharmacy-deployment.yaml
+++ b/k8s/pharmacy-deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: pharmacy-deployment
 spec:
-  replicas: 1
+  replicas: 2
   revisionHistoryLimit: 0
   selector:
     matchLabels:
@@ -28,3 +28,17 @@ spec:
             value: "inventory-service" # since port is 80, it is implicit
         ports:
         - containerPort: 80
+
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: pharmacy-lb
+spec:
+  type: LoadBalancer
+  selector:
+    app: pharmacy-pod
+  ports:
+  - port: 8080
+    targetPort: 80
