Notes of emptyDir volume

--- a/k8s/empty_dir_volume_depl.yaml
+++ b/k8s/empty_dir_volume_depl.yaml
@@ -25,3 +25,13 @@ spec:
         volumeMounts:
           - name: empty-dir-volume
             mountPath: "/scrub"
+      - name: alpine-2
+        image: alpine:latest
+        command: ["/bin/sh", "-c", "sleep 3600"]
+        resources:
+          limits:
+            memory: "128Mi"
+            cpu: "500m"
+        volumeMounts:
+          - name: empty-dir-volume
+            mountPath: "/scrub"
