😮 Additional clarity for SC,PV and PVC

--- a/k8s/persistent_volume_depl.yaml
+++ b/k8s/persistent_volume_depl.yaml
@@ -30,3 +30,18 @@ spec:
           limits:
             memory: "128Mi"
             cpu: "500m"
+
+---
+
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: office-staff-pvc
+spec:
+  resources:
+    requests:
+      storage: "100Mi"
+  # volumeMode: Filesystem
+  storageClassName: standard
+  accessModes:
+    - ReadWriteOnce
