--- a/k8s/pod_w_security_context.yaml
+++ b/k8s/pod_w_security_context.yaml
@@ -5,12 +5,12 @@ metadata:
   namespace: default
 spec:
   containers:
-  - command:
-    - sleep
-    - "4800"
-    image: ubuntu
-    name: ubuntu
-    securityContext:
-      runAsUser: 2405
-      capabilities:
-        add: ["SYS_TIME", "NET_ADMIN"]
+    - name: ubuntu
+      image: ubuntu
+      command:
+        - sleep
+        - "4800"
+      securityContext:
+        runAsUser: 2405
+        capabilities:
+          add: ["SYS_TIME", "NET_ADMIN"]
