--- a/k8s/pod.yaml
+++ b/k8s/pod.yaml
@@ -14,5 +14,7 @@ spec:
         limits:
           memory: "128Mi"
           cpu: "500m"
+        requests:
+          memory: "10Mi"
       ports:
         - containerPort: 80
